@@ -1,21 +1,10 @@
-FROM tomcat:9.0.16-jre8
+FROM maven:3.8.4-openjdk-11-slim
 
-# ENV CATALINA_OPTS="-XX:PermSize=256m -XX:MaxPermSize=768m -server -Xms256m -Xmx1g -XX:SurvivorRatio=6 -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=68 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -XX:+HeapDumpOnOutOfMemoryError"
+COPY ideas-repo /ideas/repo
+RUN cd /ideas/repo && mvn install
+COPY ideas-studio /ideas/studio
+RUN cd /ideas/studio && mvn package
 
-# Create keystore
-RUN /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/keytool -genkey -alias tomcat -keyalg RSA -storepass changeit -dname "cn=Mark Jones, ou=JavaSoft, o=Sun, c=US" -keypass changeit -keystore /usr/local/tomcat/.keystore
+RUN rm -r /ideas/repo
 
-# Add start script X
-ADD ./tomcat-config/start.sh ./
-
-# Add war to webapps
-ADD target/ROOT*.war ./webapps/ROOT.war
-
-# Make ideas-repo directory
-RUN mkdir /usr/local/tomcat/ideas-repo
-
-RUN mv  ./webapps/ROOT ./webapps/managerui
-
-EXPOSE 80 443
-
-CMD  ./bin/catalina.sh run & sleep 40s && bash ./start.sh
+CMD cd /ideas/studio && mvn spring-boot:run
